<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_register" />

    <com.kish2.hermitcrabapp.custom.FixedVideoView
        android:id="@+id/login_reg_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />


    <!--上方主要登录界面-->
    <LinearLayout
        android:id="@+id/ll_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">


        <com.kish2.hermitcrabapp.custom.StatusFixedToolBar
            android:id="@+id/sft_action_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/retrieve_bar_height" />

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:paddingTop="20dp"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/logo" />


        <!--登录用户名、邮箱、手机号输入框界面-->
        <LinearLayout
            android:id="@+id/ll_identify"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--登录logo-->
            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@null"
                android:src="@drawable/ai_user" />

            <!--小竖线-->
            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="@color/black_alpha" />

            <!--ems为控件最大宽度，此处15表示最大15个字符的宽度-->
            <!--background:@null不要下划线-->
            <!--imeOption表示输入框输入完成后，输入法的右下角按钮功能
                actionDone:完成
                actionNext:下一行
                actionSend:发送数据-->
            <EditText
                android:id="@+id/et_identify_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:autofillHints="@string/prompt_identify"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/prompt_identify"
                android:imeOptions="actionNext"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- 删除输入内容的小按钮 -->
            <ImageButton
                android:id="@+id/ib_identify_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ai_input_clear"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="invisible" />

        </LinearLayout>

        <!--密码输入框-->
        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_password_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@null"
                android:padding="2dp"
                android:src="@drawable/ai_password" />

            <!--小竖线-->
            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="@color/black_alpha" />

            <EditText
                android:id="@+id/et_password_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:autofillHints="@string/prompt_password"
                android:background="@null"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_identify_input" />

            <!-- 删除输入内容的小按钮 -->
            <ImageButton
                android:id="@+id/ib_password_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ai_input_clear"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="invisible" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/cpb_login_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="94dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/bg_login_button"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            app:initialCornerAngle="@dimen/corner_radius"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="10dp"
            app:spinning_bar_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:text="@string/resister_hint"
            android:textColor="@color/white" />

        <!--注册按钮-->
        <Button
            android:id="@+id/btn_register_jump"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="94dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/btn_register_submit"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:button="@drawable/ic_checkbox_selector"
                android:checked="true"
                android:contentDescription="@null"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"
                android:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/font_16"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_login_by_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_by_verify_code"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/ll_login_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/black_alpha_thick"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:id="@+id/ll_login_pull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_login_thirdpart"
            android:orientation="vertical"
            android:translationY="60dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lay_12"
                android:gravity="center"
                android:text="@string/other_login_method"
                android:textColor="@color/login_other_color"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_login_options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/font_18"
                android:paddingEnd="@dimen/font_18"
                android:paddingBottom="@dimen/lay_12"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/ib_login_wx"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="@dimen/lay_12"
                    android:layout_marginEnd="@dimen/lay_12"
                    android:background="@drawable/ai_wechat"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/ib_login_qq"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="@dimen/lay_12"
                    android:layout_marginEnd="@dimen/lay_12"
                    android:background="@drawable/ai_qq"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>