<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--登录用户名、邮箱、手机号输入框界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!--登录logo-->
        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@null"
            android:src="@drawable/ai_mobile" />

        <!--小竖线-->
        <View
            android:layout_width="1dp"
            android:layout_height="22dp"
            android:background="@color/black_alpha" />

        <!--ems为控件最大宽度，此处15表示最大15个字符的宽度-->
        <!--background:@null不要下划线-->
        <!--imeOption表示输入框输入完成后，输入法的右下角按钮功能
            actionDone:完成
            actionNext:下一行
            actionSend:发送数据-->
        <EditText
            android:id="@+id/et_mobile_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/prompt_mobile"
            android:background="@null"
            android:focusable="true"
            android:hint="@string/prompt_mobile"
            android:imeOptions="actionNext"
            android:inputType="textPhonetic"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <!-- 删除输入内容的小按钮 -->
        <ImageButton
            android:id="@+id/ib_mobile_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ai_input_clear"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_input"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_verify_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@null"
            android:padding="2dp"
            android:src="@drawable/ai_verify" />

        <!--小竖线-->
        <View
            android:layout_width="1dp"
            android:layout_height="22dp"
            android:background="@color/black_alpha" />

        <EditText
            android:id="@+id/et_verify_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/prompt_verify"
            android:background="@null"
            android:hint="@string/prompt_verify"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/tv_verify_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_input"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/hint_verify"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>